# veritas

./: .contract-id  .gitignore  HANDOFF.md  LICENSE  PLAN.md  PRODUCT.md  README.md  SECURITY.md
circuits/: README.md  gen-veritas-input.mjs  multiplier.circom  package-lock.json  package.json  veritas.circom
contracts/: Cargo.toml
contracts/veritas/: Cargo.toml
contracts/veritas/src/: lib.rs  test.rs
contracts/veritas/test_snapshots/test/: accepts_real_groth16_proof.1.json  constructor_pins_registry_root.1.json  double_init_fails.1.json  malformed_pub_signals_rejected.1.json  rejects_real_proof_with_tampered_public_signal.1.json  replay_rejected_already_anchored.1.json  requires_submitter_auth.1.json
docs/: architecture.md  business.md
scripts/: build-circuit.sh  check-encode.mjs  check-links.mjs  check-poseidon.mjs  deploy.sh  gen-fixtures.mjs  setup.sh
tools/encode/: Cargo.toml
tools/encode/src/: main.rs
web/: .env.example  live-test.mjs  package-lock.json  package.json  svelte.config.js  vercel.json  vite.config.js
web/src/: app.html
web/src/lib/: attestation.js  config.js  errors.js  fixtures.js  poseidon-constants.js  poseidon.js  proof.js  veritas.js  witness.js
web/src/lib/veritas-client/: README.md  package-lock.json  package.json
web/src/lib/veritas-client/src/: index.ts
web/src/routes/: +page.js  +page.svelte
web/static/circuit/: veritas.wasm  veritas_vkey.json
